# deeplook

./: API.md  Cargo.toml  Makefile  README.md  publish.sh
.github/workflows/: publish.yml  rust.yml
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs  main.rs  models.rs  utils.rs
crates/indexer/src/handlers/: balances_handler.rs  flash_loan_handler.rs  mod.rs  order_fill_handler.rs  order_update_handler.rs  pool_price_handler.rs  proposals_handler.rs  rebates_handler.rs  stakes_handler.rs  trade_params_update_handler.rs  vote_handler.rs
crates/indexer/tests/: snapshot_tests.rs
crates/orderbook/: Cargo.toml
crates/orderbook/src/: cache.rs  catch_up.rs  checkpoint.rs  error.rs  historic_orderbook.rs  keep_up.rs  lib.rs  main.rs  orderbook.rs  replay.rs  runtime_store.rs
crates/orderbook/src/handlers/: mod.rs  orderbook_order_fill_handler.rs  orderbook_order_update_handler.rs
crates/schema/: Cargo.toml
crates/schema/migrations/2025-03-19-104023_deepbook/: up.sql
crates/schema/migrations/2025-06-13-213909_add_timescaledb/: down.sql  up.sql
crates/schema/migrations/2025-07-04-073750_fix_timestamps/: down.sql  up.sql
crates/schema/migrations/2025-07-07-083758_add_pools/: down.sql  up.sql
crates/schema/migrations/2025-07-17-172556_add_orderbook_checkpoints/: down.sql  up.sql
crates/schema/migrations/2025-07-17-204810_add_timestamp_to_snapshots/: down.sql  up.sql
crates/schema/migrations/2025-07-29-080044_add_trade_count_aggregation/: down.sql  up.sql
crates/schema/migrations/2025-07-29-113842_add_fills_summary_view/: down.sql  up.sql
crates/schema/migrations/2025-08-11-091615_add_olhcv_15min_1h/: down.sql  up.sql
crates/schema/migrations/2025-08-11-123910_fix_ohlcv_4h/: down.sql  up.sql
crates/schema/src/: lib.rs  models.rs  schema.rs  view.rs
crates/server/: Cargo.toml
crates/server/src/: aggregations.rs  lib.rs  main.rs  reader.rs  server.rs
crates/server/src/metrics/: mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: cache.rs  logging.rs
docker/: Dockerfile.api  Dockerfile.indexer  Dockerfile.orderbook  entry_api.sh  entry_indexer.sh
