[workspace]
resolver = "2"

members = [
  "crates/utils",
  "crates/indexer",
  "crates/orderbook",
  "crates/schema",
  "crates/server",
]

[workspace.dependencies]
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = { version = "=0.4.41", features = ["clock", "serde"] }
tokio = "1.47.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.14.0"
diesel = "2.2.7"
diesel-async = "0.5.2"
diesel_migrations = "2.2.0"
anyhow = "1.0.98"
clap = "4.5.31"
async-trait = "0.1.83"
bcs = "0.1.6"
url = "2.5.4"
prometheus = "0.13.4"
redis = { version = "0.32.4", features = ["tokio-comp"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3"

sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "7f45ba185ff0773331d256469c49aefb82542102" }
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "7f45ba185ff0773331d256469c49aefb82542102" }
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = [
  "serde",
], rev = "86a9e06" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "7f45ba185ff0773331d256469c49aefb82542102" }
sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "7f45ba185ff0773331d256469c49aefb82542102" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "7f45ba185ff0773331d256469c49aefb82542102" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "7f45ba185ff0773331d256469c49aefb82542102" }
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", rev = "7f45ba185ff0773331d256469c49aefb82542102" }
