[package]
name = "deeplook-orderbook"
version = "0.1.0"
authors = ["ChainsomeLabs"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
clap = { workspace = true, features = ["env"] }
diesel.workspace = true
move-core-types.workspace = true
prometheus.workspace = true
redis.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
sui-indexer-alt-framework.workspace = true
sui-indexer-alt-metrics.workspace = true
sui-sdk.workspace = true
sui-sdk-types.workspace = true
sui-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
url.workspace = true

deeplook-indexer = { path = "../indexer" }
deeplook-schema = { path = "../schema" }
deeplook-server = { path = "../server" }

[[bin]]
name = "deeplook-orderbook"
path = "src/main.rs"
