[package]
name = "deeplook-schema"
version = "0.1.0"
authors = ["ChainsomeLabs"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
bigdecimal.workspace = true
chrono.workspace = true
sui-field-count.workspace = true
diesel = { workspace = true, features = [
  "postgres",
  "uuid",
  "chrono",
  "serde_json",
  "numeric",
] }
diesel_migrations.workspace = true
serde = { workspace = true }
serde_json.workspace = true
strum = "0.27.1"
strum_macros = "0.27.1"
