[package]
name = "deeplook-server"
version = "0.1.0"
authors = ["ChainsomeLabs"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
bigdecimal.workspace = true
chrono.workspace = true
deeplook-schema = { path = "../schema" }
tokio.workspace = true
futures = "0.3.31"
clap = { workspace = true, features = ["env"] }
diesel = { workspace = true, features = [
  "postgres",
  "uuid",
  "chrono",
  "serde_json",
  "numeric",
] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
bcs.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
prometheus.workspace = true
redis.workspace = true
sui-types.workspace = true
tokio-util.workspace = true
sui-indexer-alt-metrics.workspace = true
telemetry-subscribers.workspace = true
axum = { version = "0.7", features = ["json", "ws"] }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui.git", rev = "822bae4" }
sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "822bae4" }
tower-http = { version = "0.5", features = ["cors"] }
sui-sdk.workspace = true

deeplook-utils = { path = "../utils" }

[[bin]]
name = "deeplook-server"
path = "src/main.rs"
